# gobrapls

./: Cargo.toml  README.md
src/: ast.rs  diagnose_ast.rs  diagnostic.rs  main.rs  preprocess_go.rs
src/queries/: assumed_termination.scm  contract_order.scm  slice_index_trigger.scm  syntax_error.scm
