[package]
name = "gobrapls"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
log = "0.4.22"
sha2 = "0.10.8"
tempfile = "3.12.0"
tokio = { version = "1.40.0", features = ["full"] }
tower-lsp = "0.20.0"
tree-sitter = "0.23.0"
tree-sitter-gobra = { git = "https://github.com/HSMF/tree-sitter-gobra" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "std",
    "fmt",
] }
itertools = "0.13.0"
nom = "7.1.3"

[build-dependencies]
cc = "*"
